# notion-utilities

./: .gitignore  README.md  requirements.txt  setup.cfg
edit_notion/: main.py
examples/: copy.py
notion_utilities/: __init__.py  apply.py  main.py  properties.py  query.py  utilities.py
